# spinningup

./: .gitignore  README.md  pyproject.toml  setup.py
docs/user/: running.rst
rl_handson/: chapter_11.py  chapter_12.py  chapter_13.py  chapter_15.py  chapter_15_a2c.py  chapter_15_ddpg.py  chapter_16.py  chapter_20.py  chapter_20_alphazero.py  chapter_20_muzero.py  chapter_4.py  chapter_5.py  chapter_6.py  chapter_7.py  chapter_7_9.py  game.py  lib.py  lib_textworld.py  mcts.py  models.py  muzero.py  ptan.py
scripts/: make-games.sh
spinningup/: ppo.py  simple_pg.py
spinningup/ppo/: main.py
spinup/: __init__.py  run.py  user_config.py
spinup/algos/pytorch/ddpg/: ddpg.py
spinup/algos/pytorch/ppo/: ppo.py
spinup/algos/pytorch/sac/: sac.py
spinup/algos/pytorch/td3/: td3.py
spinup/algos/pytorch/trpo/: core.py  trpo.py
spinup/algos/pytorch/vpg/: vpg.py
spinup/examples/: simple_pg.py  trpo.py
spinup/examples/pytorch/pg_math/: 1_simple_pg.py  2_rtg_pg.py
spinup/examples/tf1/pg_math/: 1_simple_pg.py  2_rtg_pg.py
spinup/exercises/pytorch/problem_set_1/: exercise1_1.py  exercise1_2.py  exercise1_2_auxiliary.py  exercise1_3.py
spinup/exercises/tf1/problem_set_1/: exercise1_2.py  exercise1_3.py
spinup/utils/: mpi_tools.py  run_utils.py
test/: test_ppo.py
