[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spinup"
version = "0.1"                        # Replace with the appropriate version from your version.py file
authors = [{ name = "Joshua Achiam" }]
requires-python = ">=3.11"

dependencies = [
    "cloudpickle",
    "fire",
    "gymnasium[all]",
    "ipython",
    "joblib",
    "matplotlib",
    "mpi4py",
    "numpy",
    "pandas",
    "pytest",
    "psutil",
    "scipy",
    "seaborn==0.8.1",
    "torch",
    "tqdm",
    "tensorboardx>=2.6.2.2",
    "loguru>=0.7.3",
    "tensorboard>=2.18.0",
]

[tool.setuptools]
py-modules = ["spinup"]
