[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spinup"
version = "0.1"                        # Replace with the appropriate version from your version.py file
authors = [{ name = "Joshua Achiam" }]
requires-python = ">=3.11"

dependencies = [
    "cloudpickle",
    "fire",
    "gymnasium[all]",
    "ipython",
    "joblib",
    "matplotlib",
    "mpi4py",
    "numpy",
    "pandas",
    "pytest",
    "psutil",
    "scipy",
    "seaborn==0.8.1",
    "torch",
    "tqdm",
    "tensorboardx>=2.6.2.2",
    "loguru>=0.7.3",
    "tensorboard>=2.18.0",
    "gym",
    "stable-baselines3>=1.8.0",
]

[tool.setuptools]
py-modules = ["spinup"]

[tool.uv.sources]
gym = { git = "https://github.com/openai/gym.git", rev = "9180d12e1b66e7e2a1a622614f787a6ec147ac40" }
