[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spinup"
version = "0.1"                        # Replace with the appropriate version from your version.py file
requires-python = ">=3.11"

dependencies = [
    "seaborn==0.8.1",
    "tensorboardx>=2.6.2.2",
    "loguru>=0.7.3",
    "tensorboard>=2.18.0",
    "ale-py>=0.10.1",
    "opencv-python>=4.10.0.84",
    "fire>=0.7.0",
    "ipython>=8.30.0",
    "gymnasium[classic-control,other,mujoco]>=1.0.0",
    "torch>=2.5.1",
    "pytorch-ignite>=0.5.1",
    "textworld[vis]>=1.6.1",
    "black>=24.10.0",
    "ruff>=0.8.6",
    "nle>=1.1.0",
]

[tool.setuptools]
py-modules = ["spinup"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

